<resources>
    <string name="app_name">To Do App</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="to_do_app">TO DO APP</string>
    <string name="photo">photo</string>
    <string name="new_reminder">New Reminder</string>
    <string name="welcome">Welcome!</string>
    <string name="get_things_done_one_task_at_a_time">Get things done, one task at a time!</string>
    <string name="next">Next</string>
    <string name="ready_for_productivity">Ready for productivity?</string>
    <string name="start_here_to_organize_your_day">Start here to organize your day!</string>
    <string name="Next">Next</string>
    <string name="need_a_plan">Need a plan?</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="to_do_app_login">To-Do App Login</string>
    <string name="email">Email</string>
    <string name="add_task">Add Task</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="_0">0</string>
    <string name="scheduled">Scheduled</string>
    <string name="_1">0</string>
    <string name="all">All</string>
    <string name="my_lists">My Lists</string>
    <string name="Profile">Profile</string>
    <string name="Today">Today</string>
    <string name="_2">0</string>
    <string name="Scheduled">Scheduled</string>
    <string name="_3">0</string>
    <string name="All">All</string>
    <string name="My_lists">My Lists</string>
    <string name="PROFILE">Profile</string>
    <string name="Add_task">Add Task</string>
    <string name="Home">Home</string>
    <string name="ProfilE">Profile</string>
    <string name="to_do_list">To-Do List</string>
    <string name="enter_a_new_task">Enter a new task</string>
    <string name="to_do_lisT">To-Do List</string>
    <string name="Enter_a_new_task">Enter a new task</string>
    <string name="_1_buy_groceries">1. Buy groceries</string>
    <string name="_2_go_for_a_run">2. Go for a run</string>
    <string name="_3_study_for_exam">3. Study for exam</string>
    <string name="_4_call_mom">4. Call mom</string>
    <string name="_5_write_blog_post">5. Write blog post</string>
    <string name="_6_pay_rent">6. Pay rent</string>
    <string name="_7_schedule_dentist_appointment">7. Schedule dentist appointment</string>
    <string name="_8_fix_leaky_faucet">8. Fix leaky faucet</string>
    <string name="_9_plan_vacation">9. Plan vacation</string>
    <string name="_10_learn_new_language">10. Learn new language</string>
    <string name="_11_update_resume">11. Update resume</string>
    <string name="_12_clean_garage">12. Clean garage</string>
    <string name="_13_attend_yoga_class">13. Attend yoga class</string>
    <string name="_14_organize_photo_albums">14. Organize photo albums</string>
    <string name="_15_plant_herb_garden">15. Plant herb garden</string>
    <string name="_16_volunteer_at_shelter">16. Volunteer at shelter</string>
    <string name="_17_back_up_computer_files">17. Back up computer files</string>
    <string name="_18_start_a_book_club">18. Start a book club</string>
    <string name="_19_learn_to_play_guitar">19. Learn to play guitar</string>
    <string name="_20_create_budget_plan">20. Create budget plan</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="channel_description">channel_description</string>
    <string name="channel_name">channel_name</string>
    <string name="edit_task">Edit task</string>
    <string name="channel_names">Task Notifications</string>
    <string name="channel_descriptions">Notifications for completed tasks</string>
    <string name="TODO_APP">TODO APP</string>
    <string name="upcoming_tasks" />
    <string name="start_timer">Start Timer</string>
    <string name="alarm">Alarm</string>
    <string name="_4">3</string>
    <string name="one">1</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="aalarm">Alarm</string>
</resources>